--- a/doc/papers/15-ICSR/intro.tex
+++ b/doc/papers/15-ICSR/intro.tex
@@ -8,3 +8,5 @@ including people. The new challenge for the near future is that robots will be d
 Such application domains require robots with new capabilities leading to new scientific challenges: robots should assess the situation, estimate the needs of people, socially interact in a dynamic way and in a short time, with many people, the navigation should be safe and respects the social norms. These capabilities require new skills including robust and safe navigation, robust image and video processing, short-term human-robot interaction models, human need estimation techniques and distributed and scalable multi-agent planning.
 
 
+In this paper, after an analysis of the literature in personalized human-robot interaction (Section 2) and a brief description of the general architecture of the \coaches system (Section 3), we describe the human-robot interaction component and, in particular, our approach to personalized short-term multi-modal interaction (Section 4). Then, in Section 5, we provide some examples of application of the proposed system and finally conclusions are drafted in Section 6.
+
