--- a/doc/papers/15-ICSR/coaches.tex
+++ b/doc/papers/15-ICSR/coaches.tex
@@ -25,7 +25,7 @@ The \coaches project (October 2014 - September 2017) will provide important insi
 
 %\subsection{Software Architecture}
 
-\begin{figure}
+\begin{figure}[t!]
 \centering
 \includegraphics[width=0.95\textwidth]{fig/COACHES_swarch.png}
 \caption{\coaches software architecture}
