--- a/doc/papers/15-ICSR/main.tex
+++ b/doc/papers/15-ICSR/main.tex
@@ -31,7 +31,9 @@ Sapienza University of Rome, Italy.}
 \input{coaches}
 \input{system}
 \input{implementation}
-%\input{conclu}
+\input{conclu}
+
+{\bf MAX 10 pages!!!}
 
 \bibliographystyle{splncs03}
 \bibliography{refs} 
