Finished intro and related work

--- a/doc/papers/15-ICSR/implementation.tex
+++ b/doc/papers/15-ICSR/implementation.tex
@@ -21,6 +21,8 @@ Social norms:
 
 - Before presenting an offer to a child, ask for permission to his/her parents
 
+- do not repeat instructions to someone that already knows how to use a service
+
 - ...
 
 
@@ -28,10 +30,21 @@ Social norms:
 {\bf TODO: The examples should show that given one PNP (i.e., a particular interaction behavior), the way in which this is actually executed by the robot changes depending on the user.}
 
 
+
+
+1. advertising - variability: children, adult, elder, deaf
+
+2. directions - variability also in the input format: new or experienced user, young (ASR), elder (simple GUI), 
+
+3. guiding - variability: young, elder, blind
+
+4. services (e.g., baby care rooms) - variability: new or previous user
+
+
 Example 1: advertising
 
 The PNP describes an interaction schema. The specific text/images spoken or displayed depend on the user profile and the social norms above.
-Elder user : big font, child : animation, etc.
+Elder user : big font, child : animation, deaf person : video with subtitles ...
 
 
 
@@ -40,18 +53,14 @@ Elder user : big font, child : animation, etc.
 
 
 
+%% \textit{Example 2}: 
+%% A boy is lost in a mall. Parents communicate with the mall manager and provide a description of the child, name, height, how he was dressed... Occassionally they can also provide a photo of the boy. The manager enters this information into the robotic system which starts the following procedure to find the child.
+
+%% Procedure: 
+%% The parents have provided a photo of the child which is communicated to the robots. The robots navigate the environment while establishing conversations with several people, asking if they have seen the boy. In case of positive answer, robot shows on the display a map of the mall and asks the person to indicate approximately the place where he has seen him. At this point, the robot can move towards the place or communicate with other robot which is closer to the place or transmit this information to the security system.
 
 
-
-
-\textit{Example 2}: 
-A boy is lost in a mall. Parents communicate with the mall manager and provide a description of the child, name, height, how he was dressed... Occassionally they can also provide a photo of the boy. The manager enters this information into the robotic system which starts the following procedure to find the child.
-
-Procedure: 
-The parents have provided a photo of the child which is communicated to the robots. The robots navigate the environment while establishing conversations with several people, asking if they have seen the boy. In case of positive answer, robot shows on the display a map of the mall and asks the person to indicate approximately the place where he has seen him. At this point, the robot can move towards the place or communicate with other robot which is closer to the place or transmit this information to the security system.
-
-
-{\bf TODO can you find a way of personalizing the interaction? Here it seems more complicated since asking for user data in a situation like this would not be acceptable.}
+%% {\bf TODO can you find a way of personalizing the interaction? Here it seems more complicated since asking for user data in a situation like this would not be acceptable.}
 
 
 
