--- a/doc/papers/15-ICSR/refs.bib
+++ b/doc/papers/15-ICSR/refs.bib
@@ -18,7 +18,7 @@
 
 @inproceedings{Lee2012,
  author = {Lee, Min Kyung and Forlizzi, Jodi and Kiesler, Sara and Rybski, Paul and Antanitis, John and Savetsila, Sarun},
- title = {Personalization in HRI: A Longitudinal Field Experiment},
+ title = {Personalization in {HRI}: A Longitudinal Field Experiment},
  booktitle = {ACM/IEEE International Conference on Human-Robot Interaction},
  year = {2012},
  isbn = {978-1-4503-1063-5},
@@ -30,7 +30,7 @@
 } 
 
 @article{tapus2008,
-  title={User—robot personality matching and assistive robot behavior adaptation for post-stroke rehabilitation therapy},
+  title={User-robot personality matching and assistive robot behavior adaptation for post-stroke rehabilitation therapy},
   author={Tapus, Adriana and {\c{T}}{\u{a}}pu{\c{s}}, Cristian and Matari{\'c}, Maja J},
   journal={Intelligent Service Robotics},
   volume={1},
@@ -49,4 +49,17 @@
   pages={911--916},
   year={2008},
   publisher={IEEE}
+}
+
+@incollection{Nardi14,
+year={2014},
+isbn={978-3-319-11972-4},
+booktitle={Social Robotics},
+volume={8755},
+series={Lecture Notes in Computer Science},
+editor={Beetz, Michael and Johnston, Benjamin and Williams, Mary-Anne},
+title={Representation and Execution of Social Plans through Human-Robot Collaboration},
+publisher={Springer International Publishing},
+author={Nardi, Lorenzo and Iocchi, Luca},
+pages={266-275},
 }
