--- a/doc/papers/15-ICSR/intro.tex
+++ b/doc/papers/15-ICSR/intro.tex
@@ -5,8 +5,9 @@ Public spaces in large cities are increasingly becoming complex and unwelcoming 
 In the last decade, we observe tremendous progress in the development of robots in dynamic environments %with presence of
 including people. The new challenge for the near future is that robots will be deployed in public areas (malls, touristic sites, parks, etc.) to offer services to make the use of the environment welcoming and easy to use by visitors, elderly or disabled people. 
 
-Such application domains require robots with new capabilities leading to new scientific challenges: robots should assess the situation, estimate the needs of people, socially interact in a dynamic way and in a short time, with many people, the navigation should be safe and respects the social norms. These capabilities require new skills including robust and safe navigation, robust image and video processing, short-term human-robot interaction models, human need estimation techniques and distributed and scalable multi-agent planning.
+Such application domains require robots with new capabilities leading to new scientific challenges: robots should assess the situation, estimate the needs of people, socially interact in a dynamic way and in a short time, with many people, the navigation should be safe and respect the social norms. These capabilities require new skills including robust and safe navigation, robust image and video processing, short-term human-robot interaction models, human need estimation techniques and distributed and scalable multi-agent planning.
 
+The integration of these technologies is the objective of our project \coaches where we will develop an autonomous multi-robot system deployed in a shopping mall. Robots will provide personalized assistance to customers and shop managers.
 
-In this paper, after an analysis of the literature in personalized human-robot interaction (Section 2) and a brief description of the general architecture of the \coaches system (Section 3), we describe the human-robot interaction component and, in particular, our approach to personalized short-term multi-modal interaction (Section 4). Then, in Section 5, we provide some examples of application of the proposed system and finally conclusions are drafted in Section 6.
+In the rest of this paper, after an analysis of the literature in personalized human-robot interaction (Section 2) and a brief description of the general architecture of the \coaches system (Section 3), we describe the human-robot interaction component and, in particular, our approach to personalized short-term multi-modal interaction (Section 4). Then, in Section 5, we provide some examples of application of the proposed system and finally conclusions are drafted in Section 6.
 
