Fixed tipos and references

--- a/doc/papers/15-ICSR/implementation.tex
+++ b/doc/papers/15-ICSR/implementation.tex
@@ -13,7 +13,7 @@ This solution separates the implementation of the basic behaviors from their com
 
 ...
 
-Social norms:
+Some examples of social norms applied to our shopping center scenario:
 
 - Big font for elderly
 
@@ -21,10 +21,11 @@ Social norms:
 
 - Before presenting an offer to a child, ask for permission to his/her parents
 
-- do not repeat instructions to someone that already knows how to use a service
+- Do not repeat instructions to someone that already knows how to use a service
 
 - ...
 
+Below we show four use cases where 
 
 
 {\bf TODO: The examples should show that given one PNP (i.e., a particular interaction behavior), the way in which this is actually executed by the robot changes depending on the user.}
