--- a/doc/papers/15-ICSR/refs.bib
+++ b/doc/papers/15-ICSR/refs.bib
@@ -2,7 +2,7 @@
 @inproceedings{mason2011robot,
   title={Robot self-initiative and personalization by learning through repeated interactions},
   author={Mason, Martin and Lopes, Manuel},
-  booktitle={ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
+  booktitle={ACM/IEEE Int. Conf. on Human-Robot Interaction (HRI)},
   pages={433--440},
   year={2011},
 }
@@ -10,7 +10,7 @@
 @inproceedings{gockley2005,
   title={Designing robots for long-term social interaction},
   author={Gockley, Rachel and Bruce, Allison and Forlizzi, Jodi and Michalowski, Marek and Mundell, Anne and Rosenthal, Stephanie and Sellner, Brennan and Simmons, Reid and Snipes, Kevin and Schultz, Alan C and others},
-  booktitle={EEE/RSJ International Conference on Intelligent Robots and Systems.},
+  booktitle={EEE/RSJ Int. Conf. on Intelligent Robots and Systems.},
   pages={1338--1343},
   year={2005},
   organization={IEEE}
@@ -19,7 +19,7 @@
 @inproceedings{Lee2012,
  author = {Lee, Min Kyung and Forlizzi, Jodi and Kiesler, Sara and Rybski, Paul and Antanitis, John and Savetsila, Sarun},
  title = {Personalization in {HRI}: A Longitudinal Field Experiment},
- booktitle = {ACM/IEEE International Conference on Human-Robot Interaction},
+ booktitle = {ACM/IEEE Int. Conf. on Human-Robot Interaction},
  year = {2012},
  isbn = {978-1-4503-1063-5},
  location = {Boston, Massachusetts, USA},
@@ -62,4 +62,24 @@ title={Representation and Execution of Social Plans through Human-Robot Collabor
 publisher={Springer International Publishing},
 author={Nardi, Lorenzo and Iocchi, Luca},
 pages={266-275},
+}
+
+@article{ziparo2011petri,
+  title={Petri net plans},
+  author={Ziparo, Vittorio A and Iocchi, Luca and Lima, Pedro U and Nardi, Daniele and Palamara, Pier Francesco},
+  journal={Autonomous Agents and Multi-Agent Systems},
+  volume={23},
+  number={3},
+  pages={344--383},
+  year={2011},
+  publisher={Springer}
+}
+
+@inproceedings{boella2009normative,
+  title={Normative framework for normative system change},
+  author={Boella, Guido and Pigozzi, Gabriella and Van Der Torre, Leendert},
+  booktitle={Proc. of The 8th Int. Conf. on Autonomous Agents and Multiagent Systems},
+  pages={169--176},
+  year={2009},
+  organization={International Foundation for Autonomous Agents and Multiagent Systems}
 }
