--- a/doc/papers/15-ICSR/main.tex
+++ b/doc/papers/15-ICSR/main.tex
@@ -7,7 +7,7 @@
 
 \usepackage{color} %for comments
 
-\renewcommand{\baselinestretch}{0.98}
+\renewcommand{\baselinestretch}{0.97}
 
 \def\coaches{{\tt COACHES} }
 
@@ -15,10 +15,13 @@
 
 \title{Personalized short-term multi-modal interaction for social robots assisting customers in shopping centers}
 
-\author{... Luca , Mayte, Laurent, Abdel-Illah, ...}
+\author{Luca Iocchi$^1$, Maria Teresa L\'azaro$^1$, \\
+Laurent Jeanpierre$^2$, Abdel-Illah Mouaddib$^2$}
 
-\institute{Dept. of Computer, Control and Management Engineering\\
-Sapienza University of Rome, Italy.}
+\institute{$^1$ Dept. of Computer, Control and Management Engineering\\
+Sapienza University of Rome, Italy.\\
+$^2$ GREYC, University of Caen Lower-Normandy, France
+}
 
 \begin{document}
 
