--- a/doc/papers/15-ICSR/refs.bib
+++ b/doc/papers/15-ICSR/refs.bib
@@ -63,3 +63,35 @@ publisher={Springer International Publishing},
 author={Nardi, Lorenzo and Iocchi, Luca},
 pages={266-275},
 }
+
+
+@inproceedings{BoPiTo09,
+	title = {Normative Framework for Normative System Change}, 
+	author = {Boella, G. and Pigozzi, G. and van der Torre, L.},
+	booktitle = {Proc. of 8th Int. Conf. on Autonomous Agents and Multiagent Systems (AAMAS)},
+	year = 2009
+}
+
+@article{ZiIo11PNP,
+  author    = {Ziparo, V. A. and Iocchi, L. and  Lima, P. U. and
+               Nardi, D. and Palamara, P. F.},
+  title     = {Petri Net Plans - {A} framework for collaboration and coordination
+               in multi-robot systems},
+  journal   = {Autonomous Agents and Multi-Agent Systems},
+  volume    = {23},
+  number    = {3},
+  pages     = {344--383},
+  year      = {2011}
+}
+
+@inproceedings{BastianelliCCBN14,
+  author    = {Emanuele Bastianelli and
+               Giuseppe Castellucci and
+               Danilo Croce and
+               Roberto Basili and
+               Daniele Nardi},
+  title     = {Effective and Robust Natural Language Understanding for Human-Robot Interaction},
+  booktitle = {Proceedings of 21st European Conference on Artificial Intelligence},
+  year      = {2014},
+  pages     = {57--62}
+}
