--- a/doc/papers/15-ICSR/system.tex
+++ b/doc/papers/15-ICSR/system.tex
@@ -3,9 +3,6 @@
 As already mentioned, 
 one of the main goals of the COACHES project is personalized short-term multi-modal interactions with non-expert users, that are typical customers of a shopping mall.
 
-In this context, \emph{Personalized} means that the robot should use different forms of interactions to communicate the same concept with different users, in order to increase its social acceptability;
-\emph{Short-term} means that the interactions are short and focused on only one particular communicative objective, avoiding long and complex interactions; while
-\emph{Multi-modality} is obtained by using different interaction devices on the robot (although in this study, we focus only on speech and graphical interfaces).
 
 
 
@@ -30,7 +27,7 @@ In the remaining of this section, we will describe in more details the component
 
 \subsection{PNP Adaptor and Executor}
 
-The Interaction Module is implemented within the framework of the Petri Net Plans (PNP) formalism \cite{ZiIo}. PNPs are based on two main concepts: \emph{actions} (i.e., output operations) and \emph{conditions} (i.e., input operations). Actions include motion of the robot in the environment, spoken sentences issued by the on-board speakers, text, images, videos or animations shown on the on-board screen, etc.
+The Interaction Module is implemented within the framework of the Petri Net Plans (PNP) formalism \cite{ZiIo11PNP}. PNPs are based on two main concepts: \emph{actions} (i.e., output operations) and \emph{conditions} (i.e., input operations). Actions include motion of the robot in the environment, spoken sentences issued by the on-board speakers, text, images, videos or animations shown on the on-board screen, etc.
 Conditions include the result of perception routines (e.g., image processing or speech recognition), the input given by a user through a GUI on the on-board screen, information about personal data of user acquired through a reader of fidelity cards, etc.
 
 The use of PNP for representing in an integrated way all these different kinds of actions and conditions allows for a strong coordination between the different sub-systems of the robot and for showing more complex behaviors and, in particular, a multi-modal interaction that can be easily customized according to the user.
@@ -79,7 +76,7 @@ The personalized propositions $\Delta_u$ affect the execution of the output acti
 Therefore, literals associated with \emph{Say} (e.g., $\neg$ use\_speech) are added as parameters of all the actions \emph{Say} in the PNPs, while literals associated with \emph{Show} (e.g., use\_big\_font, display\_spoken\_text, use\_simple\_GUI) are added as parameters of all the actions \emph{Show} in the PNPs,
 These parameters determine the personalized interaction and will be considered by the Interaction Manager.
 
-PNP Executor is a general-purpose executor of PNP already described in \cite{} and successfully used in many applications. PNP Executor treats actions and conditions without giving them any semantics and controls only the flow of execution. The actual execution of the basic actions and conditions is responsibility of the Interaction Manager.
+PNP Executor is a general-purpose executor of PNP already described in \cite{ZiIo11PNP} and successfully used in many applications. PNP Executor treats actions and conditions without giving them any semantics and controls only the flow of execution. The actual execution of the basic actions and conditions is responsibility of the Interaction Manager.
 
 
 \subsection{Interaction Manager}
@@ -102,7 +99,7 @@ It is formed by Automatic Speech Recognition (ASR) and Text-To-Speech (TTS).
 
 The ASR component analyzes audio data coming from a microphone and extract semantic information about the spoken sentences, according to a predefined grammar. This component allows the robot to understand user spoken commands.
 The speech recognition module is based on the Microsoft engine and on a further processing module that builds the semantic frames of the recognized sentences.
-More details on the approach are available in \cite{Ba...}.
+More details on the approach are available in \cite{BastianelliCCBN14}.
 
 The TTS component transforms text messages in audio data that are then emitted by the speakers on-board the robot. This enables the robot to speak to people. The Microsoft TTS engine is used for this module.
 
