--- a/doc/papers/15-ICSR/main.tex
+++ b/doc/papers/15-ICSR/main.tex
@@ -13,7 +13,7 @@
 
 %\captionsetup[table]{skip=10pt}
 
-\title{Personalized short-term multi-modal interaction for social robots assisting customers in shopping centers}
+\title{Personalized short-term multi-modal interaction for social robots assisting users in shopping malls}
 
 \author{Luca Iocchi$^1$, Maria Teresa L\'azaro$^1$, \\
 Laurent Jeanpierre$^2$, Abdel-Illah Mouaddib$^2$}
