--- a/doc/papers/15-ICSR/implementation.tex
+++ b/doc/papers/15-ICSR/implementation.tex
@@ -1,87 +1,19 @@
 \section{Examples of personalized interactions}
 
 
-In this section we will show through a set of examples how general purpose social norms are used to affect the behavior of the robot in a declarative way. More specifically, the different behavior of the robot is obtained through a general purpose algorithm, and not by specifying specific exceptions in the implementation of each single behavior.
-This solution separates the implementation of the basic behaviors from their composition in a complex task and it thus provides for high scalability. For example, it is possible to add social norms without changing the basic behaviors, or add new behaviors without changing the social norms, and obtain an overall more complex task.
+In this section we will show through a set of examples how general purpose social norms are used to affect the behavior of the robot in a declarative way. The examples are taken from the uses cases of the \coaches project and they will eventually fully implemented and test with real robots in the shopping mall in Caen. The examples below refer to the social norms described as an example in Section \ref{sec:pers} and assume user profiles are available.
 
 
-...
+%{\bf TODO: The examples should show that given one PNP (i.e., a particular interaction behavior), the way in which this is actually executed by the robot changes depending on the user.}
 
+\paragraph{Example 1. Advertising.} One of the tasks of the \coaches robot is to show advertisements to users of the shopping mall. These advertisements (in forms of text, images, videos, etc.) are provided by the shop manager and stored in the Media Library. 
+In one form of advertising planned in the project the robot knows the user profile. In this case the Interaction Module described in the previous section can activate personalized messages.
+Effects of personalized interactions in this example are: i) animation instead of videos for children, ii) big fonts and simple GUI for elderly people, etc. 
 
+\paragraph{Example 2. Directions and guiding.} The robot is able to give directions and guide people in the mall. Requests are acquired either by voice or graphical interface and the robot uses its semantic map of the environment to show directions or accompany the user. In this case the following personalized behaviors can be obtained: i) for elderly people, a simple GUI shows the direction; ii) the interaction with a deaf and elder person is made with graphical interface only; iii) the interaction with a blind person uses only voice. In all the three cases, the robot offers to accompany them and for the blind person a special notification is given with instructions of how the guidance will happen.
 
+\paragraph{Example 3. Baby care rooms.} Baby care rooms can be used by mothers, but must be reserved and they are locked when not in use. The robot can enable this service upon request. Some personalized interactions in this case are: i) a new user is fully instructed with detailed instructions about how to use the service; ii) a user that already used the service a few time ago is given directly the access to the baby care room; iii) children or very young users will be notified that they are not allowed to use the service.
 
-
-...
-
-Some examples of social norms applied to our shopping center scenario:
-
-- Big font for elderly
-
-- Animations for children 
-
-- Before presenting an offer to a child, ask for permission to his/her parents
-
-- Do not repeat instructions to someone that already knows how to use a service
-
-- ...
-
-Below we show four use cases where 
-
-
-{\bf TODO: The examples should show that given one PNP (i.e., a particular interaction behavior), the way in which this is actually executed by the robot changes depending on the user.}
-
-
-
-
-1. advertising - variability: children, adult, elder, deaf
-
-2. directions - variability also in the input format: new or experienced user, young (ASR), elder (simple GUI), 
-
-3. guiding - variability: young, elder, blind
-
-4. services (e.g., baby care rooms) - variability: new or previous user
-
-
-Example 1: advertising
-
-The PNP describes an interaction schema. The specific text/images spoken or displayed depend on the user profile and the social norms above.
-Elder user : big font, child : animation, deaf person : video with subtitles ...
-
-
-
-
-
-
-
-
-%% \textit{Example 2}: 
-%% A boy is lost in a mall. Parents communicate with the mall manager and provide a description of the child, name, height, how he was dressed... Occassionally they can also provide a photo of the boy. The manager enters this information into the robotic system which starts the following procedure to find the child.
-
-%% Procedure: 
-%% The parents have provided a photo of the child which is communicated to the robots. The robots navigate the environment while establishing conversations with several people, asking if they have seen the boy. In case of positive answer, robot shows on the display a map of the mall and asks the person to indicate approximately the place where he has seen him. At this point, the robot can move towards the place or communicate with other robot which is closer to the place or transmit this information to the security system.
-
-
-%% {\bf TODO can you find a way of personalizing the interaction? Here it seems more complicated since asking for user data in a situation like this would not be acceptable.}
-
-
-
-\textit{Example 3}:
- 
-In the shopping mall there are several baby care rooms. For privacy reasons, only one mother with her baby can enter at a time and, when the room is free, it remains blocked for security reasons as it contains electrical appliances, so one must ask for permission to use them. 
-A mother with its baby needs to make use of a baby care room.
-
-Procedure: 
-The mother approaches the robot asking for directions for a baby care room. The robot connects to the network and computes the nearest free room. Then it shows on the display the location of the room. At the same time, the robot communicates to the security system so the guard goes to the room to open the door and greets the mother letting her know that the guard is going so she can use the room. \textbf{Alternative with more interaction:} the robot asks if the mother agrees to go to that room and to swipe her fidelity card in the robot's reader to introduce the information in the system. After this, the room's door will be automatically opened when the woman swipes her card in the room's card reader. This way also for security reasons, it is registered who used that room.
-{\color{blue} Here the plan to be executed could depend if the person has a fidelity card or not.}
-
-
-{\bf TODO Personalization? Could be that the robot knows if the mother has already used the service and that it does not explain what to do in this case. The social norm applied in this case is ``do not repeat instructions to someone that already knows how to use a service''
-and can be applied to other examples as well (e.g., calling for a taxi).}
-
-
-
-
-
-
-
+Notice that all these examples are implemented without explicit coding the corresponding behaviors. The expected personalized behavior is the effect of the application of the social norms to the user profile and of the corresponding modifications of the plans that activate actions with proper parameters. Notice also that the social norms are not specific of any particular task. This allows for a high level of extendibility. For example, adding, removing or modifying social norms allow for a significant change of behavior of the robot with different users without requiring any change (or just minimal changes) in the implementation of the actions. For example, assuming that we want to add the capability of the robot to regulate the volume of its voice and to personalize this feature. With our architecture it is sufficient to do the following steps: add a parameter about volume in the \emph{Say} action (e.g., corresponding to a new proposition loud\_speech in $I$) and a social norm 
+(elder, loud\_speech)  in $S$. All the interactions with elder people now will use an increased volume of the robot speech.
 
