First submitted version

--- a/doc/papers/15-ICSR/coaches.tex
+++ b/doc/papers/15-ICSR/coaches.tex
@@ -1,19 +1,16 @@
 \section{COACHES Environment, Hardware and Software Architecture}
-
-
+\vspace{-0.1cm}
 \begin{figure}[t!]
 \centering
-\includegraphics[width=0.6\textwidth]{fig/rivedelorne}
-\hspace{0.1cm}
-\includegraphics[width=0.18\textwidth]{fig/diago1}
+\includegraphics[height=4.2cm]{fig/rivedelorne}\hspace{0.1cm}\hfill
+\includegraphics[width=0.18\textwidth]{fig/diago1}\hspace{0.1cm}\hfill
 \includegraphics[width=0.18\textwidth]{fig/coaches_robot}
 \caption{\coaches environment and robots.}
 \label{fig:env}
 \end{figure}
 
 In the \coaches project, we aim at further developing this technology, but specifically study, develop and test integration of Artificial Intelligence and Robotics technology in order to develop robots that can suitable interact with users in a complex large public environment, like a shopping mall.
-Figure \ref{fig:env} shows, on the left, the \emph{Rive de l'orne} shooping mall in Caen (France) where the experimental activities of the project will be carried out, on the middle a prototype of the robot that will be used for the preliminary experiments, on the right, the design of the robots that will be realized (within fall 2015) and tested during the project.
-
+Figure \ref{fig:env} shows, on the left, the \emph{Rive de l'orne} shooping mall in Caen (France) where the experimental activities of the project will be carried out, on the middle a prototype of the robot that will be used for the preliminary experiments, on the right, the design of the robots that will be realized (within Fall 2015) and tested during the project.
 
 As shown in the figure, in contrast with previous work on social robotics and human-robot interaction, the \coaches environment is very challenging, because populated by many people.
 Moreover, we aim at a more sophisticated interaction using multiple modalities (speech, gesture, touch user interfaces) and dialog generated on-line according to the current situation
