--- a/doc/papers/15-ICSR/conclu.tex
+++ b/doc/papers/15-ICSR/conclu.tex
@@ -1,6 +1,11 @@
+\vspace{-0.2cm}
 \section{Conclusions}
-
-Personalized human-robot interaction...
-
+\vspace{-0.1cm}
+In this paper we have presented our architecture for personalized
+sort-term human-robot interaction. Robot actions have been described
+through PNPs that can be dynamically adapted according to the user
+profile and a set of domain-independent social norms. This provides
+the system with a high level of scalability and, as shown in our
+examples, allows for being easily extended to a variety of interactions.
 
 
