--- a/doc/papers/15-ICSR/refs.bib
+++ b/doc/papers/15-ICSR/refs.bib
@@ -10,10 +10,9 @@
 @inproceedings{gockley2005,
   title={Designing robots for long-term social interaction},
   author={Gockley, Rachel and Bruce, Allison and Forlizzi, Jodi and Michalowski, Marek and Mundell, Anne and Rosenthal, Stephanie and Sellner, Brennan and Simmons, Reid and Snipes, Kevin and Schultz, Alan C and others},
-  booktitle={EEE/RSJ Int. Conf. on Intelligent Robots and Systems.},
+  booktitle={IEEE/RSJ Int. Conf. on Intelligent Robots and Systems.},
   pages={1338--1343},
-  year={2005},
-  organization={IEEE}
+  year={2005}
 }
 
 @inproceedings{Lee2012,
@@ -21,11 +20,7 @@
  title = {Personalization in {HRI}: A Longitudinal Field Experiment},
  booktitle = {ACM/IEEE Int. Conf. on Human-Robot Interaction},
  year = {2012},
- isbn = {978-1-4503-1063-5},
- location = {Boston, Massachusetts, USA},
  pages = {319--326},
- numpages = {8},
- publisher = {ACM},
  address = {New York, NY, USA},
 } 
 
