--- a/doc/papers/15-ICSR/related.tex
+++ b/doc/papers/15-ICSR/related.tex
@@ -1,4 +1,5 @@
 \section{Related Work}
+\vspace{-0.1cm}
 
 The use of service robots interacting daily with people in public
 spaces or workplaces has become of increased interest in the last
@@ -46,7 +47,6 @@ In contrast to these works, our approach for personalized human-robot
 interaction is not based on learning the personality of the user, but
 on a set of \textit{social norms} that are present in our everyday
 lifes in human interactions.  Moreover, our architecture is designed on domain and task-independent representation of information, providing for a high variability of personalized behaviors, with a simple declarative definition of the social norms that we want the robot to apply. This provides many advantages in terms of extendibility and scalability of the system.
-
-The approach proposed in this paper extends a previous work \cite{Nardi14} about the design of social plans, by adding the notions of user profiles and of personalized interactions.
+The proposed approach extends a previous work \cite{Nardi14} about the design of social plans, by adding the notions of user profiles and of personalized interactions.
 
 
