--- a/doc/papers/15-ICSR/conclu.tex
+++ b/doc/papers/15-ICSR/conclu.tex
@@ -2,10 +2,10 @@
 \section{Conclusions}
 \vspace{-0.1cm}
 In this paper we have presented our architecture for personalized
-sort-term human-robot interaction. Robot actions have been described
+short-term human-robot interaction. Robot actions have been described
 through PNPs that can be dynamically adapted according to the user
 profile and a set of domain-independent social norms. This provides
 the system with a high level of scalability and, as shown in our
 examples, allows for being easily extended to a variety of interactions.
 
-
+The on-going \coaches project is the main experimental test-bed for the work presented in this paper. Future work thus include a user study, whose main focus will be assessing improved acceptance of a social robot with personalized interactions. With the approach described in this paper, producing different versions of the interaction behavior of the robot is as easy as adding or removing a social norm.
